Fixed alignment issues with edit user form. (...)
- Added TeX images in user page
- Made welcome box a notify class, so it can be used elsewhere too
- Form alignment/rearrangement on edit user page
- Made notices on edit user page more noticable

--- a/assets/css/benchmarks.less
+++ b/assets/css/benchmarks.less
@@ -213,7 +213,7 @@ p {
   margin-left: 5px;
 }
 
-#welcome {
+.notice {
   background-color: @background-gray;
   border: 1px solid @border-gray;
   .rounded();
