--- a/assets/css/forms.less
+++ b/assets/css/forms.less
@@ -8,11 +8,13 @@ input, textarea {
 	width: 200px;
 	background: #fff;
   .rounded();
-  clear: both;
+  //clear: both;
 }
 
 input[type=checkbox] {
   width: auto;
+  margin: auto;
+  vertical-align: middle;
 }
 
 textarea {
@@ -26,19 +28,22 @@ input:focus, textarea:focus {
 }
 
 form {
+  padding: 5px;
+
   ol {
     list-style: none;
   }
 
   li {
-    clear: both;
+    //clear: both;
   }
 
   label {
-    float: left;
+    font-weight: bold;
+    //float: left;
     margin-right: 6px;
     line-height: 30px;
-    clear: both;
+    //clear: both;
   }
 
   .button {
